{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 16,
  "lineage": "92f6ad1e-95fe-e70c-555b-ce13df57c0eb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jwt_provider_ec2_inst",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07d9b9ddc6cd8dd30",
            "arn": "arn:aws:ec2:us-east-1:654654477138:instance/i-05c773d281f624b72",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05c773d281f624b72",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "jwt_provider_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08c0dd3b095b08962",
            "private_dns": "ip-10-0-1-115.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.115",
            "public_dns": "ec2-54-89-128-217.compute-1.amazonaws.com",
            "public_ip": "54.89.128.217",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0155f2e10b405fe6a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-087a86ebe3703e77d",
            "tags": {
              "Name": "jwt_provider_ec2_inst"
            },
            "tags_all": {
              "Name": "jwt_provider_ec2_inst"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07b2ae350f78efb86"
            ]
          },
          "dependencies": [
            "aws_key_pair.jwt_provider_key",
            "aws_security_group.jwtprovider_sg",
            "aws_subnet.jwt_provider_subnet",
            "aws_vpc.jwt_provider_vpc_1",
            "data.aws_ami.jwt_provider_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "jwt_provider_igw_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654477138:internet-gateway/igw-0d4a993916790d477",
            "id": "igw-0d4a993916790d477",
            "owner_id": "654654477138",
            "tags": {
              "Name": "jwt_provider_igw_1a"
            },
            "tags_all": {
              "Name": "jwt_provider_igw_1a"
            },
            "vpc_id": "vpc-0946ec5454bf25166"
          },
          "dependencies": [
            "aws_vpc.jwt_provider_vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "jwt_provider_default_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d4a993916790d477",
            "id": "r-rtb-0320db486bd227fd61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0320db486bd227fd6",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.jwt_provider_igw_1a",
            "aws_route_table.jwt_provider_rtb_pub",
            "aws_vpc.jwt_provider_vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "jwt_provider_rtb_pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654477138:route-table/rtb-0320db486bd227fd6",
            "id": "rtb-0320db486bd227fd6",
            "owner_id": "654654477138",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "jwt_provider_rtb_pub"
            },
            "tags_all": {
              "Name": "jwt_provider_rtb_pub"
            },
            "timeouts": null,
            "vpc_id": "vpc-0946ec5454bf25166"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.jwt_provider_vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "jwt_provider_rtba_pub_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02920133809aba204",
            "route_table_id": "rtb-0320db486bd227fd6",
            "subnet_id": "subnet-087a86ebe3703e77d"
          },
          "dependencies": [
            "aws_route_table.jwt_provider_rtb_pub",
            "aws_subnet.jwt_provider_subnet",
            "aws_vpc.jwt_provider_vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jwtprovider_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654477138:security-group/sg-07b2ae350f78efb86",
            "description": "jwtprovider security group",
            "egress": [],
            "id": "sg-07b2ae350f78efb86",
            "ingress": [],
            "name": "jwtprovider_name_sg",
            "name_prefix": "",
            "owner_id": "654654477138",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0946ec5454bf25166"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.jwt_provider_vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sgr_http_in",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-1467518878",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07b2ae350f78efb86",
            "security_group_rule_id": "sgr-0f2ffe7c30c1b5c11",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.jwtprovider_sg",
            "aws_vpc.jwt_provider_vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sgr_out_pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-805312087",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-07b2ae350f78efb86",
            "security_group_rule_id": "sgr-0abad351a50aead71",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.jwtprovider_sg",
            "aws_vpc.jwt_provider_vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sgr_ssh_in",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-504180181",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07b2ae350f78efb86",
            "security_group_rule_id": "sgr-0ed651ac4e3547498",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.jwtprovider_sg",
            "aws_vpc.jwt_provider_vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "jwt_provider_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654477138:subnet/subnet-087a86ebe3703e77d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-087a86ebe3703e77d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "654654477138",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jwt_provider_subnet"
            },
            "tags_all": {
              "Name": "jwt_provider_subnet"
            },
            "vpc_id": "vpc-0946ec5454bf25166"
          },
          "dependencies": [
            "aws_vpc.jwt_provider_vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "jwt_provider_vpc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654477138:vpc/vpc-0946ec5454bf25166",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e3a0a322c3dc07aa",
            "default_route_table_id": "rtb-02a0e2356f918ebd6",
            "default_security_group_id": "sg-0cb6132272f7a1689",
            "dhcp_options_id": "dopt-0214793001d013530",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0946ec5454bf25166",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02a0e2356f918ebd6",
            "owner_id": "654654477138",
            "tags": {
              "Name": "jwt_provider_vpc_1"
            },
            "tags_all": {
              "Name": "jwt_provider_vpc_1"
            }
          }
        }
      ]
    }
  ]
}